--- a/src/components/RightPanelScroll.module.css
+++ b/src/components/RightPanelScroll.module.css
@@ -1,18 +1,17 @@
-.right-panel-scroll {
+.rightPanelScroll {
     background-image: url('../assets/images/scroll-background.jpg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     width: 15vw;
-    height: 60vh; /* Зменшено до 60vh */
+    height: 60vh;
     display: flex;
     justify-content: center;
-    align-items: flex-start; /* Вирівнюємо вгору */
+    align-items: flex-start;
     margin-top: 30vh;
-
 }
 
-.icon-list {
+.iconList {
     list-style-type: none;
     display: flex;
     flex-direction: column;
@@ -21,7 +20,7 @@
     margin: 0;
 }
 
-.icon-item {
+.iconItem {
     margin-top: 5vh;
     margin-right: 1.5vw;
     display: flex;
@@ -29,8 +28,8 @@
     align-items: center;
 }
 
-.icon-image {
-    width: 3vw; 
+.iconImage {
+    width: 3vw;
     cursor: pointer;
     padding: 0;
 }
