--- a/src/pages/WarPage.module.css
+++ b/src/pages/WarPage.module.css
@@ -1,9 +1,11 @@
 body {
     font-family: 'Press Start 2P', cursive;
-    background-color: #A3806C; /* Твій новий колір фону */
+    background-color: #A3806C;
 }
-
-.romance-page {
+.bookshelf-container {
+    padding-top: 15vh;
+}
+.war-page {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -11,3 +13,6 @@ body {
 }
 
 
+.content{
+    margin-left: 4vw;
+}
