--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,13 +1,18 @@
 body {
     font-family: 'Press Start 2P', cursive;
-    background-color: #A3806C; /* Твій новий колір фону */
+    background-color: #A3806C;
 }
 
-.war-page {
+.home-page {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     height: 100vh;
 }
 
-
+.bookshelf-container {
+    padding-top: 15vh;
+}
+.content{
+    margin-left: 4vw;
+}
