--- a/src/components/Bookshelf.module.css
+++ b/src/components/Bookshelf.module.css
@@ -11,7 +11,7 @@
     align-items: flex-end;
     background-color: #7c5944;
     border-radius: 10px;
-    border: 10px solid #4D2D18;
+    border: 10px solid #4d2d18;
     width: 60vw;
     height: 50vh;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -31,7 +31,9 @@
     align-items: center;
     max-height: 45vh;
     cursor: pointer;
-    transition: transform 0.2s, opacity 0.2s;
+    transition:
+        transform 0.2s,
+        opacity 0.2s;
 }
 
 .book:hover {
@@ -47,11 +49,10 @@
     transform: rotate(180deg);
 }
 
-
 .genre-border {
     height: 5vh;
     background-color: #593821;
-    color: #7c5944;
+    color: #ad8d70;
     padding: 10px;
     text-align: center;
     align-items: center;
@@ -69,7 +70,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    background-color: #8B6955;
+    background-color: #8b6955;
     position: relative;
     overflow: hidden;
 }
@@ -77,7 +78,6 @@
 .spider-web-image {
     width: 100%;
 }
-
 
 .tooltip {
     position: absolute;
